--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
         <div class="row container-grid projects-wrapper mt-4 pt-2">
             <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box mt-2">
+                <div class="item-box m-2">
                     <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" title="">
                         <img class="item-container img-fluid mx-auto" src="images/aiicb.png" alt="1" />
                         <div class="item-mask">
@@ -478,7 +478,56 @@
                 </div>
             </div>
             <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box mt-2">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/aimg.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>AI Music Generation</h5>
+                                <p class="text-uppercase">
+                                    In this project we were able to generates melodious sound of piano by mixing different nodes
+                                    and chords By training on LSTM Model.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/sda.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>A School Donation Analysis</h5>
+                                <p class="text-uppercase">
+                                    Using School Donation Datasets,I was able to Analysed and Visualized using numpy and pandas & plotly, Cufflinks and Matplotlib respectively.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>E-Commerce Site</h5>
+                                <p class="text-uppercase">
+                                    Created An E-Commerce Site using Reactjs, REDUX, HTML, CSS and JavaScript where a user can buy product, add it to cart and added PayPal Button to make payment.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
                     <a href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" title="">
                         <img class="item-container img-fluid mx-auto" src="images/asm.png" alt="1" />
                         <div class="item-mask">
@@ -495,54 +544,7 @@
                 </div>
             </div>
             <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box mt-2">
-                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/sda.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>A School Donation Analysis</h5>
-                                <p class="text-uppercase">
-                                    Using School Donation Datasets,I was able to Analysed and Visualized using numpy and pandas & plotly, Cufflinks and Matplotlib respectively.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box mt-2">
-                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>E-Commerce Site</h5>
-                                <p class="text-uppercase">
-                                    Created An E-Commerce Site using Reactjs, REDUX, HTML, CSS and JavaScript where a user can buy product, add it to cart and added PayPal Button to make payment.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box mt-2">
-                    <a href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/aimg.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>AI Music Generation</h5>
-                                <p class="text-uppercase">
-                                    In this project we were able to generates melodious sound of piano by mixing different nodes
-                                    and chords By training on LSTM Model.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box mt-2">
+                <div class="item-box m-2">
                     <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" title="">
                         <img class="item-container img-fluid mx-auto" src="images/us.png" alt="1" />
                         <div class="item-mask">
