--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-custom sticky sticky-dark">
     <div class="container">
         <!-- LOGO -->
-        <a class="navbar-brand logo text-uppercase" href="index.html">
+        <a class="navbar-brand logo text-uppercase" href="/">
             Jayant Goel
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
