--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Personal Portfolio Template" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="Themesdesign" />
+    <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
+    <meta name="DC.title" content="Personal Portfolio" />
+    <meta name="keywords" content="Jayant Goel Portfolio Data Science ♠ " />
+    <meta name="author" content="Jayant Goel" />
+    <meta name="copyright" content="Designed with <i class='mdi mdi-heart text-danger'></i> By Jayant Goel"/>
     <title>Jayant Goel ♠ </title>
 
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -630,7 +632,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.linkedin.com/in/jayant-goel-a136861b9/" target="_blank">
+                            <a href="https://www.linkedin.com/in/JayantGoel001/" target="_blank">
                                 <i class="mdi mdi-linkedin dark"></i>
                             </a>
                         </li>
