--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <div class="row container-grid projects-wrapper mt-4 pt-2">
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" title="">
+                    <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/aiicb.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -493,7 +493,7 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" title="">
+                    <a href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/aimg.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -510,7 +510,7 @@
 
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" title="">
+                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/sda.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -526,23 +526,7 @@
 
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>E-Commerce Site</h5>
-                                <p class="text-uppercase">
-                                    Created An E-Commerce Site using Reactjs, REDUX, HTML, CSS and JavaScript where a user can buy product, add it to cart and added PayPal Button to make payment.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" title="">
+                    <a href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/asm.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -559,7 +543,22 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" title="">
+                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
+                        <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>E-Commerce Site</h5>
+                                <p class="text-uppercase">
+                                    Created An E-Commerce Site using Reactjs, REDUX, HTML, CSS and JavaScript where a user can buy product, add it to cart and added PayPal Button to make payment.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/us.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
