--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
     </div>
 </section>
 
-<section class="section contact-wrapper bg-contact" id="contact">
+<section class="section contact-wrapper bg-contact pointer" id="contact">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6">
@@ -590,17 +590,22 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-lg-3 col-md-4 mt-4 pt-2">
+            <div class="col-lg-3 col-md-4 mt-4 pt-2"
+                 data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Location</em></strong>"
+            >
                 <div class="contact-desc text-center">
                     <div class="contact-icon mb-3">
                         <i class="mdi mdi-map-marker text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0" style="color: white">Ghaziabad, Uttar Pradesh, India</p>
+                        <p class="mb-0" style="color: white"
+                        >Ghaziabad, Uttar Pradesh, India</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 mt-4 pt-2">
+            <div class="col-lg-3 col-md-4 mt-4 pt-2"
+                 data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Contact Number</em></strong>"
+            >
                 <div class="contact-desc text-center">
                     <div class="contact-icon mb-3">
                         <i class="mdi mdi-phone-classic text-custom h3"></i>
@@ -611,7 +616,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 mt-4 pt-2">
+            <div class="col-lg-3 col-md-4 mt-4 pt-2"
+                 data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>E-Mail</em></strong>"
+            >
                 <div class="contact-desc text-center">
                     <div class="contact-icon mb-3">
                         <i class="mdi mdi-email-outline text-custom h3"></i>
@@ -633,29 +640,37 @@
                 <div class="text-center mt-5 mb-5">
                     <ul class="social-icons mb-4 list-inline">
                         <li class="list-inline-item">
-                            <a href="https://github.com/JayantGoel001/" target="_blank">
+                            <a href="https://github.com/JayantGoel001/" target="_blank"
+                               data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>GitHub</em></strong>"
+                            >
                                 <i class="fab fa-github dark"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://gist.github.com/JayantGoel001/" target="_blank">
+                            <a href="https://gist.github.com/JayantGoel001/" target="_blank"
+                               data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Gists</em></strong>"
+                            >
                                 <img src="images/gist.png" width="20px" height="20px" alt="">
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.linkedin.com/in/JayantGoel001/" target="_blank">
+                            <a href="https://www.linkedin.com/in/JayantGoel001/" target="_blank"
+                               data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>LinkedIn</em></strong>"
+                            >
                                 <i class="mdi mdi-linkedin dark"></i>
                             </a>
                         </li>
                         <br/>
                         <br/>
                         <li class="list-inline-item">
-                            <a href="https://www.instagram.com/jayantgoel001/" target="_blank">
+                            <a href="https://www.instagram.com/jayantgoel001/" target="_blank"
+                               data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Instagram</em></strong>">
                                 <i class="mdi mdi-instagram dark"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.facebook.com/jayant.goel.12/" target="_blank">
+                            <a href="https://www.facebook.com/jayant.goel.12/" target="_blank"
+                               data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>GitHub</em></strong>">
                                 <i class="fab fa-facebook dark"></i>
                             </a>
                         </li>
