--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     </div>
 </section>
 
-<section class="section" id="about">
+<section class="section " id="about">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-6">
+            <div class="col-lg-6 pointer">
                 <div class="section-title text-center mb-4 pb-2">
                     <div class="mb-5">
                         <i class="mdi mdi-account-settings h1 text-muted"></i>
@@ -655,8 +655,7 @@
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.linkedin.com/in/JayantGoel001/" target="_blank"
-                               data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>LinkedIn</em></strong>"
-                            >
+                               data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>LinkedIn</em></strong>">
                                 <i class="mdi mdi-linkedin dark"></i>
                             </a>
                         </li>
@@ -670,18 +669,19 @@
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.facebook.com/jayant.goel.12/" target="_blank"
-                               data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>GitHub</em></strong>">
+                               data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Facebook</em></strong>">
                                 <i class="fab fa-facebook dark"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://twitter.com/JayantGoel6" target="_blank">
+                            <a href="https://twitter.com/JayantGoel6" target="_blank"
+                               data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Twitter</em></strong>">
                                 <i class="fab fa-twitter dark" ></i>
                             </a>
                         </li>
                     </ul>
                     <br>
-                    <p class="copyright-desc text-muted mb-0 font-weight-bold">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
+                    <p class="copyright-desc text-muted mb-1 font-weight-bold h6">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
                 </div>
             </div>
         </div>
