--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="col-lg-10 mt-5">
                         <div class="home-title text-center">
                             <h5 class="text-white-50 sub-title mb-3 font-weight-normal">Student</h5>
-                            <h1 class="display-3"><span class="element text-white" data-elements="Jayant Goel, Data Science/Machine Learning Enthusiast, Full Stack Web Developer(MEAN), Android Developer,"></span></h1>
+                            <h1 class="display-3"><span class="element text-white" data-elements="Jayant Goel, Data Science and Machine Learning Enthusiast, MEAN Stack Developer, Android Developer,"></span></h1>
                             <p class="text-light mx-auto para-desc">I am  Third-year student pursuing a Bachelor of Technology in Computer Science Engineering from Jaypee Institute Of Information Technology, <br> Sector 62 </p>
                             <div class="mt-4 pt-2">
                                 <a target="_blank"
@@ -131,8 +131,8 @@
                             </h3>
                             <p class="text-muted">
                                 An Enthusiast Coder Eager to contribute to team success through hard work, skills, attention to details and excellent organizational skills.
-                                Currently Exploring the world of Technology as SDE Intern at Talent Decrypt and as a 3rd year student at Jaypee Institute Of Information Technology.
-                                Recently worked as Android Developer At Theatron for 7 months.
+                                Currently Exploring the world of Technology as SDE Intern at Talent Decrypt and as a Third year student at Jaypee Institute Of Information Technology.
+                                <br>Recently worked as Android Developer At Theatron for 7 months.
                             </p>
                             <p class="text-muted"><strong>IDE & Editors Used</strong> : Android Studio, Intellij, PyCharm , WebStorm, CLion, PHPStorm, Anaconda Navigator, Atom, Python 3.8, BlueJ, CodeBlocks </p>
                         </div>
