--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 </head>
 
 <body>
+<div id="particles-js"></div>
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-custom sticky sticky-dark">
     <div class="container">
@@ -715,6 +716,8 @@
         $('[data-toggle="tooltip"]').tooltip({ trigger: "hover" })
     })
 </script>
+<script src="js/particles.js"></script>
+
 </body>
 
 </html>
