--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <div class="row container-grid projects-wrapper mt-4 pt-2">
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/aiicb.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -493,7 +493,7 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/aimg.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -510,7 +510,7 @@
 
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/sda.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -526,7 +526,7 @@
 
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/asm.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -543,7 +543,7 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -558,7 +558,7 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Click To View My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/us.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -630,7 +630,7 @@
             </div>
         </div>
     </div>
-
+    <div id="particles-js2"></div>
 </section>
 
 <footer class="footer bg-light">
@@ -681,11 +681,11 @@
                         </li>
                     </ul>
                     <br>
-                    <p class="copyright-desc text-muted mb-1 font-weight-bold h6">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
                 </div>
             </div>
         </div>
     </div>
+    <p class="copyright-desc text-muted mb-0 font-weight-bold h6 p-2" style="background-color: #242a35;text-align: center">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
 </footer>
 <!-- footer end -->
 <div id="particles-js"></div>
