--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta name="DC.title" content="Personal Portfolio" />
-    <meta name="keywords" content="Jayant Goel Portfolio Data Science ♠ " />
+    <meta name="keywords" content="Jayant Goel Portfolio ♠ " />
     <meta name="author" content="Jayant Goel" />
-    <meta name="copyright" content="Designed with <i class='mdi mdi-heart text-danger'></i> By Jayant Goel"/>
     <title>Jayant Goel ♠ </title>
 
     <link rel="shortcut icon" href="images/favicon.ico">
