--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@
 </section>
 
 <section class="section contact-wrapper bg-contact pointer" id="contact">
+    <div id="particles-js2"></div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6">
@@ -629,7 +630,6 @@
             </div>
         </div>
     </div>
-    <div id="particles-js2"></div>
 </section>
 
 <footer class="footer bg-light">
@@ -684,7 +684,7 @@
             </div>
         </div>
     </div>
-    <p class="copyright-desc text-muted mb-0 font-weight-bold h6 p-2" style="background-color: #242a35;text-align: center">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
+    <p class="copyright-desc text-white mb-0 h6 p-2" style="background-color: #242a35;text-align: center">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
 </footer>
 <!-- footer end -->
 <div id="particles-js"></div>
