--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center mt-5 mb-5">
+                    <br>
                     <ul class="social-icons mb-4 list-inline">
                         <li class="list-inline-item">
                             <a href="https://github.com/JayantGoel001/" target="_blank"
@@ -679,12 +680,11 @@
                             </a>
                         </li>
                     </ul>
-                    <br>
                 </div>
             </div>
         </div>
     </div>
-    <p class="copyright-desc text-white mb-0 h6 p-2" style="background-color: #242a35;text-align: center">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
+    <p class="copyright-desc text-white mb-0 h6 p-2 mt-2" style="background-color: #242a35;text-align: center">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
 </footer>
 <!-- footer end -->
 <div id="particles-js"></div>
@@ -713,6 +713,7 @@
             $( ' .navbar-nav' ).find( 'li.active' ).removeClass( 'active' );
             $( this ).parent( 'li' ).addClass( 'active' );
         });
+
     $(function () {
         $('[data-toggle="tooltip"]').tooltip({ trigger: "hover" })
     })
