--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div  class="collapse navbar-collapse"  id="navbarCollapse">
             <ul class="navbar-nav ml-auto navbar-center" id="mySidenav" >
                 <li class="nav-item active">
-                    <a href="#home" class="nav-link" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Home</em></strong>">Home</a>
+                    <a href="#home" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Home</em></strong>">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#about" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>About</em></strong>">About</a>
@@ -62,7 +62,7 @@
                     <a href="#portfolio" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Portfolio</em></strong>">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#contact" class="nav-link" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Contact</em></strong>">Contact</a>
+                    <a href="#contact" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Contact</em></strong>">Contact</a>
                 </li>
             </ul>
         </div>
